[package]
name = "wesl-web"
version = "0.1.0"
authors = ["Mathis Brossier <mathis.brossier@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["debug"]
debug = ["console_log", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", features = ["color"], optional = true }
log = "0.4.22"
cfg-if = "0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify = "0.4.5"
wesl = { path = "../../wgsl-tools/crates/wesl" }
ansi-to-html = "0.2.1"

wesl-parse = { path = '../../wesl-rust/crates/wesl-parse' }
wesl-bundle = { path = '../../wesl-rust/crates/wesl-bundle' }
wesl-resolve = { path = '../../wesl-rust/crates/wesl-resolve' }
wesl-types = { path = '../../wesl-rust/crates/wesl-types' }
wesl-mangle = { path = '../../wesl-rust/crates/wesl-mangle' }
wesl-flatten = { path = '../../wesl-rust/crates/wesl-flatten' }
wesl-dealias = { path = '../../wesl-rust/crates/wesl-dealias' }
wesl-specialize = { path = '../../wesl-rust/crates/wesl-specialize' }
wesl-template-normalize = { path = '../../wesl-rust/crates/wesl-template-normalize' }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
